Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
